fixed the css issue for the experience sections not showing up properly

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -465,7 +465,7 @@ footer {
     -----------------------------------
 */
 
-#experience {
+.experience {
     padding: 50px 15px;
     text-align: center;
     border-bottom: 1px solid $border;
